--- a/style.css
+++ b/style.css
@@ -130,3 +130,21 @@ p{
     text-indent: 50px;
     text-align: justify;
 }
+.searchbar{
+	width:20%;
+	border: 1px solid lightgrey ;
+	border-radius: 15px;
+	padding:0px 14px;
+	margin: 8px auto;
+    display: flexbox;
+}
+.searchbox{
+    width:80%;
+    padding:8px 8px;
+    border:none;
+    margin:0 2px;
+    outline:none;
+}
+.searchbar:hover{
+    box-shadow: 0px 5px 5px dimgray;
+}
